--- a/work.html
+++ b/work.html
@@ -11,6 +11,8 @@
   <link href="/Personal-Portfolio/assets/css/portfolio.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700,300italic,400italic,400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link href="/Personal-Portfolio/assets/css/portfolio.css" rel="stylesheet" type="text/css">
+  <script language="javascript" type="text/javascript" src="jquery-1.8.3.js"></script>
 </head>
 
 <body>
@@ -40,7 +42,7 @@
   <div class="container-fluid center-block work-body">
     <h1>Writing</h1>
     <div>
-    <div>
+    <div class="resume-spacing">
       <ul class="row">
         <li class="col-xs-3">
           <img src="assets/images/feast-logo.png" alt="Feast Magazine logo">
@@ -63,7 +65,7 @@
     </div>
 
     <div>
-      <div>
+      <div class="resume-spacing">
         <ul class="row">
           <li class="col-xs-3">
             <img src="assets/images/kcmag-logo.png" alt="KC Magazine logo">
@@ -87,7 +89,7 @@
     </div>
 
     <div>
-      <div>
+      <div class="resume-spacing">
         <ul class="row">
           <li class="col-xs-3">
             <img src="assets/images/tulsapeople-logo.png" alt="TulsaPeople Magazine logo">
@@ -112,7 +114,7 @@
       </div>
 
     <div>
-      <div>
+      <div class="resume-spacing">
         <ul class="row">
           <li class="col-xs-3">
             <img src="assets/images/satw-logo.png" alt="SATW logo">
@@ -135,7 +137,7 @@
       </div>
 
       <div>
-        <div>
+        <div class="resume-spacing">
           <ul class="row">
             <li class="col-xs-3">
               <img src="assets/images/vox-logo.png" alt="Vox Magazine logo">
@@ -158,7 +160,7 @@
         </div>
 
         <div>
-          <div>
+          <div class="resume-spacing">
             <ul class="row">
               <li class="col-xs-3">
                 <img src="assets/images/missourian-logo.png" alt="Columbia Missourian logo">
@@ -181,7 +183,7 @@
           </div>
 
           <div>
-            <div>
+            <div class="resume-spacing">
               <ul class="row">
                 <li class="col-xs-3">
                   <img src="assets/images/maneater-logo.png" alt="The Maneater logo">
@@ -204,11 +206,11 @@
             </div>
   </div> */end writing div */
 
-  <div class="container-fluid center-block">
+  <div class="container-fluid center-block work-body">
     <h1>Social Media</h1>
 
       <div>
-        <div>
+        <div class="resume-spacing">
           <ul class="row">
             <li class="col-xs-3">
               <img src="assets/images/satw-logo.png" alt="Society of American Travel Writers logo">
@@ -231,7 +233,7 @@
         </div>
 
         <div>
-          <div>
+          <div class="resume-spacing">
             <ul class="row">
               <li class="col-xs-3">
                 <img src="assets/images/vox-logo.png" alt="Vox Magazine logo">
@@ -256,7 +258,7 @@
           </div>
 
           <div>
-            <div>
+            <div class="resume-spacing">
               <ul class="row">
                 <li class="col-xs-3">
                   <img src="assets/images/maneater-logo.png" alt="The Maneater logo">
@@ -285,10 +287,10 @@
             </div>
     </div> /end social div/
 
-    <div class="container-fluid center-block">
+    <div class="container-fluid center-block work-body">
       <h1>Editing</h1>
       <div>
-        <div>
+        <div class="resume-spacing">
           <ul class="row">
             <li class="col-xs-3">
               <img src="assets/images/vox-logo.png" alt="Vox Magazine logo">
@@ -313,7 +315,7 @@
         </div>
 
         <div>
-          <div>
+          <div class="resume-spacing">
             <ul class="row">
               <li class="col-xs-3">
                 <img src="assets/images/maneater-logo.png" alt="The Maneater logo">
@@ -344,10 +346,10 @@
 
     </div> /end editing div/
 
-    <div class="container-fluid center-block">
+    <div class="container-fluid center-block work-body">
       <h1>Digital Design</h1>
       <div>
-        <div>
+        <div class="resume-spacing">
           <ul class="row">
             <li class="col-xs-3">
               <img src="assets/images/vox-logo.png" alt="Vox Magazine logo">
@@ -372,7 +374,7 @@
         </div>
     </div> /end digital div/
 
-    <div class="container-fluid center-block"
+    <div class="container-fluid center-block">
     <footer>
       <ul class="row footer-icons">
         <li class="col-xs-2"></li>
